[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/rathole.gd" type="Script" id=1]
[ext_resource path="res://art/rathole.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 88.0

[sub_resource type="CircleShape2D" id=3]

[node name="rathole" type="KinematicBody2D"]
light_mask = 4
z_index = -5
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Position2D" type="Position2D" parent="."]

[node name="rats" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 4
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
